@@ -22,7 +22,8 @@ enum exit_codes {
                       /* EXIT_SUCCESS is already defined as 0 */
   EXIT_BAD_USAGE = 1, /* bad program syntax, invalid command-line options */
   EXIT_BAD_INPUT = 2, /* failed to open some of the input files */
-  EXIT_PANIC     = 4  /* PANIC during program execution */
+  EXIT_PANIC     = 4, /* PANIC during program execution */
+  EXIT_UNMODIFIED = 8,
 };
 
 
